--- a/src/app/pages/filtros/filtros.page.html
+++ b/src/app/pages/filtros/filtros.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header mode="ios">
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
             <ion-back-button text="" mode="md"></ion-back-button>
@@ -9,7 +9,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content mode="ios">
     <ion-list>
         <ion-item lines="full">
             <ion-list-header>
