--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -36,7 +36,7 @@
             </ion-item>
             <ion-item>
                 <ion-icon name="calendar-outline"></ion-icon>
-                <ion-datetime cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD MM YYYY" placeholder="Data Nascimento"></ion-datetime>
+                <ion-datetime  cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY" placeholder="Data Nascimento"></ion-datetime>
             </ion-item>
             <ion-item>
                 <ion-icon name="mail-outline"></ion-icon>
@@ -59,7 +59,6 @@
                 <ion-input clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
             </ion-item>
         </ion-list>
-
         <div class="n3">
             <button class="btnEntrar" type="submit" [disabled]="formulario.invalid">
         Concluir Cadastro
