--- a/src/app/pages/inserir-servico/inserir-servico.page.scss
+++ b/src/app/pages/inserir-servico/inserir-servico.page.scss
@@ -39,6 +39,10 @@ ion-item-group {
         padding-top: 16px;
         padding-bottom: 16px;
     }
+    h6 {
+        font-size: 10px;
+        font-weight: 900;
+    }
 }
 
 ion-item {
@@ -61,4 +65,18 @@ ion-item {
             }
         }
     }
+    ion-button {
+        height: -webkit-fill-available;
+        width: -webkit-fill-available;
+    }
+    ion-select {
+        width: -webkit-fill-available;
+        border: 1px solid;
+        border-radius: 10px;
+        padding: 8px;
+    }
+}
+
+.select-item {
+    padding: 12px 16px;
 }
