--- a/src/app/pages/meus-dados/meus-dados.page.html
+++ b/src/app/pages/meus-dados/meus-dados.page.html
@@ -8,28 +8,26 @@
 </ion-header>
 
 <ion-content>
- <ion-list class="list1">
-        <ion-item>
-            <ion-icon name="transgender-outline"></ion-icon>
-            <ion-label>Gênero</ion-label>
-            <ion-select [placeholder]="genero" [(ngModel)]="genero" (ionChange)="onChange($event)" nome="genero" mode="ios" interface="popover" >
-                <ion-select-option *ngFor="let item of generos" [value]="item.id">{{ item.text}}</ion-select-option>
-            </ion-select>
-        </ion-item>
-    </ion-list>
-  <form #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
+  <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
         <ion-list>
             <ion-item>
                 <ion-icon name="person-outline"></ion-icon>
-                <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true"  name="nome" required></ion-input>
+                <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true"  name="nome"></ion-input>
             </ion-item>
+             <ion-item>
+            <ion-icon name="transgender-outline"></ion-icon>
+            <ion-label>Gênero</ion-label>
+            <ion-select [placeholder]="usuario.genero" (ionChange)="onChange($event)" nome="genero" mode="ios" interface="popover" >
+                <ion-select-option *ngFor="let item of generos" [value]="item.text">{{ item.text}}</ion-select-option>
+            </ion-select>
+        </ion-item>
             <ion-item>
                 <ion-icon name="calendar-outline"></ion-icon>
-                <ion-datetime cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY" [value]="usuario.data"></ion-datetime>
+                <ion-datetime [(ngModel)]="usuario.data" name="data" cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY"></ion-datetime>
             </ion-item>
             <ion-item>
                 <ion-icon name="card-outline"></ion-icon>
-                <ion-input mode="ios" clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
+                <ion-input mode="ios" clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" disabled="true"></ion-input>
             </ion-item>
         </ion-list>
 
