--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button text="" mode="md"></ion-back-button>
+            <ion-back-button text="" mode="md" defaultHref="home"></ion-back-button>
         </ion-buttons>
         <ion-title>
             <div class="n1">
