--- a/src/app/pages/endereco/endereco.page.scss
+++ b/src/app/pages/endereco/endereco.page.scss
@@ -1,6 +1,7 @@
 
-.list1{
-  margin-top: 30px;
+
+ion-item-group{
+  margin-top: 10%;
 }
 ion-list{
   margin-top: -8px;
@@ -19,7 +20,7 @@ ion-input{
   width: 100%;
 }
 
-.n3{
+.ion-padding-vertical-x{
   padding-top: 15px;
   margin-top: auto;
   text-align: center;
