--- a/src/app/pages/entrar/entrar.page.html
+++ b/src/app/pages/entrar/entrar.page.html
@@ -1,15 +1,15 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button text="" mode="md"></ion-back-button>
+            <ion-back-button text="" mode="md" defaultHref="home"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            <div class="n1">
+            <div class="ion-padding-vertical-x">
                 <label>
       Entrar no seu perfil
       </label>
             </div>
-            <div class="n2">
+            <div class="ion-padding-vertical-2x">
                 <label>Bem-vindo(a) de volta ao E-BICOS</label>
             </div>
         </ion-title>
@@ -22,32 +22,39 @@
         <ion-label color="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
     </ion-list-header>
 
-    <form class="form1" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
-        <ion-list class="list1">
-            <ion-label class="lab">Email</ion-label>
-            <ion-item lines="none">
-                <ion-input clearInput="true" placeholder="exemple@gmail.com" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
-            </ion-item>
-            <div class="lab"></div>
-            <ion-label class="lab">Senha</ion-label>
-            <ion-item lines="none">
-                <ion-input placeholder="password" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
-            </ion-item>
-            <ion-label (click)="alert()" class="lab">Esqueceu a senha ?</ion-label>
+    <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
+        <ion-list lines="full">
+            <ion-item-group>
+                 <ion-item lines="none" >
+                       <h5>Email</h5>
+                  </ion-item>
+                  <ion-item lines="none">
+                         <ion-input autocomplete="email"  clearInput="true" placeholder="exemple@gmail.com" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
+                  </ion-item>
+                  <ion-item lines="none" >
+                       <h5>Senha</h5>
+                  </ion-item>
+                  <ion-item lines="none">
+                    <ion-input placeholder="password" clearInput="true" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
+                  </ion-item>
+                  <ion-item lines="none" >
+                  <ion-label (click)="alert()">Esqueceu a senha ?</ion-label>
+                  </ion-item>
+            </ion-item-group>
         </ion-list>
-
-        <div class="n3">
+        <div class="ion-padding-vertical-3x">
             <button class="btnEntrar" type="submit" [disabled]="formulario.invalid">
         Entrar
         </button>
         </div>
     </form>
 
-    <div class="n3">
+    <div class="ion-padding-vertical-3x">
         <ion-button (click)="showPageCadastrar()" color="dark" fill="outline" size="large">
             Criar Perfil
         </ion-button>
     </div>
+
 
 
 
