--- a/src/app/pages/entrar/entrar.page.scss
+++ b/src/app/pages/entrar/entrar.page.scss
@@ -1,74 +1,63 @@
-ion-toolbar{
-  ion-title{
+ion-toolbar {
+  ion-title {
     padding-top: 20px;
     margin-right: 30px;
   }
 }
 
-.lab{
-  padding-top: 15px;
-  font-weight: bold;
-}
-.form1{
+.form {
   margin-top: 5%;
 }
-.list1{
-  width: 100%;
-  padding-left: 20%;
-  padding-right: 20%;
-}
 
-ion-input{
-  height: 50px;
-  width: 100%;
+ion-item {
+  margin-right: 10%;
+  margin-left: 10%;
 
-}
-
-ion-item{
-  border: 1px solid black;
-  border-radius: 4px 4px;
-  margin-bottom: 15px;
-  margin-top: 8px;
-}
-.n1{
-    padding-top: 2%;
-    text-align: center;
-    color: white;
+  h5 {
     font-weight: bold;
+  }
+  ion-input {
 
+    --placeholder-opacity: 1;
+    --padding-start: 16px;
+    margin-left: 10px;
+    height: auto;
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 4px 4px;
+  }
+  ion-label {
+    margin-left: 10px;
+    margin-top: -5px;
+  }
+}
+.ion-padding-vertical-x {
+  padding-top: 2%;
+  text-align: center;
+  color: white;
+  font-weight: bold;
 }
 
-.n2{
+.ion-padding-vertical-2x {
   padding-top: 5px;
   margin-top: auto;
   text-align: center;
   font-size: 15px;
   color: white;
   padding-bottom: 20px;
-
 }
 
-.n3{
+.ion-padding-vertical-3x {
   padding-top: 15px;
   margin-top: auto;
   text-align: center;
 }
-.logo1{
-  display: block;
-  width: 300px;
-  padding-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 10px;
 
-}
-.btnEntrar{
+.btnEntrar {
   width: 192.2px;
   height: 56px;
   color: white;
-  background: #2877D3;
+  background: #2877d3;
   font-size: 20px;
-  border-radius: 2px  4px;
-
+  border-radius: 2px 4px;
 }
-
