--- a/src/app/pages/meus-dados/meus-dados.page.html
+++ b/src/app/pages/meus-dados/meus-dados.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button text="" mode="md"></ion-back-button>
+            <ion-back-button text="" mode="md" defaultHref="perfil"></ion-back-button>
         </ion-buttons>
     <ion-title>Meus Dados</ion-title>
   </ion-toolbar>
