--- a/src/app/pages/anuncio/anuncio.page.scss
+++ b/src/app/pages/anuncio/anuncio.page.scss
@@ -38,3 +38,15 @@ ion-item {
         padding: 8px;
     }
 }
+
+.heartSelected {
+    color: red;
+}
+
+.heartUnselected {
+    color: white;
+}
+
+ion-fab-button {
+    --background: #45E12B;
+}
