--- a/src/app/pages/servicos/servicos.page.html
+++ b/src/app/pages/servicos/servicos.page.html
@@ -1,68 +1,66 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title slot="start">Serviços</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title slot="start">Serviços</ion-title>
+    </ion-toolbar>
 
-  <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="top">
-        <ion-tab-button tab="localizacao" (click)="showPageLocalizacao()">
-          <ion-icon name="location-outline"></ion-icon>
-          <ion-label>Localização</ion-label>
-        </ion-tab-button>
-    
-        <ion-tab-button tab="categorias" (click)="showPageCategorias()">
-          <ion-icon name="pencil-sharp"></ion-icon>
-          <ion-label>Categorias</ion-label>
-        </ion-tab-button>
-    
-        <ion-tab-button tab="filtros" (click)="showPageFiltros()">
-          <ion-icon name="filter-outline"></ion-icon>
-          <ion-label>Filtros</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-tabs>
+            <ion-tab-bar slot="top">
+                <ion-tab-button tab="localizacao" (click)="showPageLocalizacao()">
+                    <ion-icon name="location-outline"></ion-icon>
+                    <ion-label>Localização</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button tab="categorias" (click)="showPageCategorias()">
+                    <ion-icon name="pencil-sharp"></ion-icon>
+                    <ion-label>Categorias</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button tab="filtros" (click)="showPageFiltros()">
+                    <ion-icon name="filter-outline"></ion-icon>
+                    <ion-label>Filtros</ion-label>
+                </ion-tab-button>
+            </ion-tab-bar>
+        </ion-tabs>
+    </ion-toolbar>
 
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let card of cards">
-    <ion-item lines="full">
-      <ion-card-subtitle (click)="abreAnuncio(card)">{{card.categoria}}</ion-card-subtitle>
-      <ion-button fill="clear" slot="end">
-        <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
-      </ion-button>
-      <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
-        <ion-icon slot="icon-only"
-        [class]="card.favorito ? 'heartSelected' : ''"
-        [name]="card.favorito ? 'heart' : 'heart-outline'"></ion-icon>
-      </ion-button>
-    </ion-item>
+    <ion-card *ngFor="let card of cards">
+        <ion-item lines="full">
+            <ion-card-subtitle (click)="abreAnuncio(card)">{{card.categoria}}</ion-card-subtitle>
+            <ion-button fill="clear" slot="end">
+                <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
+                <ion-icon slot="icon-only" [class]="card.favorito ? 'heartSelected' : ''" [name]="card.favorito ? 'heart' : 'heart-outline'"></ion-icon>
+            </ion-button>
+        </ion-item>
 
-    <ion-card-content (click)="abreAnuncio(card)">
-      <ion-card-title>{{card.subcategoria}}</ion-card-title>
-      {{card.descricao}}
-    </ion-card-content>
+        <ion-card-content (click)="abreAnuncio(card)">
+            <ion-card-title>{{card.subcategoria}}</ion-card-title>
+            {{card.descricao}}
+        </ion-card-content>
 
-    <ion-grid>
-      <ion-row>
-        <ion-col size="8">
-          <ion-label fill="clear">
-            <ion-icon slot="icon-only" name="location-outline"></ion-icon>
-            {{card.cidade}} - {{card.estado}}
-          </ion-label>
-        </ion-col>
-        <ion-col size="4">
-          <ion-label fill="clear">
-            <ion-icon slot="icon-only" name="time-outline"></ion-icon>
-            {{card.data}}
-          </ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-card>
+        <ion-grid>
+            <ion-row>
+                <ion-col size="8">
+                    <ion-label fill="clear">
+                        <ion-icon slot="icon-only" name="location-outline"></ion-icon>
+                        {{card.cidade}} - {{card.estado}}
+                    </ion-label>
+                </ion-col>
+                <ion-col size="4">
+                    <ion-label fill="clear">
+                        <ion-icon slot="icon-only" name="time-outline"></ion-icon>
+                        {{card.data}}
+                    </ion-label>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-card>
 </ion-content>
