correção das paginas quem-somos e termos-de-uso

--- a/src/app/pages/quem-somos/quem-somos.page.html
+++ b/src/app/pages/quem-somos/quem-somos.page.html
@@ -1,14 +1,9 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-        <ion-back-button text="" mode="md"></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      <span>E-BICOS</span>
-    </ion-title>
-  </ion-toolbar>
-  <ion-toolbar color="primary">
-    <ion-title>QUEM SOMOS</ion-title>
+    <ion-title>Quem Somos</ion-title>
   </ion-toolbar>
 </ion-header>
 
