--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -32,35 +32,27 @@
         <ion-list>
             <ion-item>
                 <ion-icon name="person-outline"></ion-icon>
-                <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
+                <ion-input [(ngModel)] = "usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon name="calendar-outline"></ion-icon>
-                <ion-datetime  cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY" placeholder="Data Nascimento"></ion-datetime>
+                <ion-datetime [(ngModel)] = "usuario.data" name="data"  cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY" placeholder="Data Nascimento"></ion-datetime>
             </ion-item>
             <ion-item>
                 <ion-icon name="mail-outline"></ion-icon>
-                <ion-input clearInput="true" placeholder="E-mail" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" required></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-icon name="mail-outline"></ion-icon>
-                <ion-input clearInput="true" placeholder="Confirme o E-mail" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
+                <ion-input placeholder="E-mail" clearInput="true"  type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon name="lock-closed-outline"></ion-icon>
-                <ion-input placeholder="Senha " type="password" name="password1" required></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-icon name="lock-closed-outline"></ion-icon>
-                <ion-input placeholder="Confirme a senha" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
+                <ion-input placeholder="Senha" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon name="card-outline"></ion-icon>
-                <ion-input clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
+                <ion-input clearInput="true" [(ngModel)] = "usuario.cpf" placeholder="CPF" name="cpf"  required></ion-input>
             </ion-item>
         </ion-list>
         <div class="n3">
-            <button class="btnEntrar" type="submit" [disabled]="formulario.invalid">
+            <button class="btnEntrar" type="submit" >
         Concluir Cadastro
         </button>
         </div>
