--- a/src/app/pages/cadastro/cadastro.page.scss
+++ b/src/app/pages/cadastro/cadastro.page.scss
@@ -5,10 +5,15 @@ ion-toolbar{
   }
 }
 
+.link{
+  font-size: 12px;
+  width: 100%;
+  padding-left: 5%;
+  margin-top: 10px;
 
-.list1{
-  margin-bottom: -20px;
 }
+
+
 ion-list{
   width: 100%;
   padding-left: 15%;
