Mudanças CSS(Home,Entrar,Cadastro)+FireStore

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
         </button>
        </div>
     <div class="n3">
-     <ion-button (click)="showPageCadastro()"  color="light" fill="outline" size="large">
+     <ion-button class="btnCriar" (click)="showPageCadastro()"  color="light" fill="outline" size="large">
         Criar Perfil
         </ion-button>
     </div>
