--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -10,25 +10,24 @@
                 </ion-button>
             </div>
             <div class="n2">
-                <ion-label>Cadastre-se gratuitamente! <br>É muito simples</ion-label>
+                <ion-label>Cadastre-se gratuitamente! <br>É muito simples<br></ion-label>
             </div>
         </ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-list-header>
+<ion-list-header>
         <ion-label color="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
     </ion-list-header>
-
     <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
         <ion-list>
             <ion-item>
                 <ion-icon name="person-outline"></ion-icon>
-                <ion-input [(ngModel)] = "usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
+                <ion-input [(ngModel)] = "usuario.nome"  clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon name="calendar-outline"></ion-icon>
-                <ion-datetime [(ngModel)] = "usuario.data" name="data"  cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD/MM/YYYY" placeholder="Data Nascimento"></ion-datetime>
+                <ion-datetime [(ngModel)] = "usuario.data" name="data"  cancelText="Cancelar" doneText="Confirmar"  displayFormat="DD/MM/YYYY" placeholder="Data Nascimento"></ion-datetime>
             </ion-item>
             <ion-item>
                 <ion-icon name="mail-outline"></ion-icon>
@@ -37,8 +36,8 @@
             <ion-item>
             <ion-icon name="transgender-outline"></ion-icon>
             <ion-label>Gênero</ion-label>
-            <ion-select (ionChange)="onChange($event)" nome="genero" mode="ios" interface="popover" placeholder="Selecionar">
-                <ion-select-option *ngFor="let item of generos" [value]="item.id">{{ item.text}}</ion-select-option>
+            <ion-select (ionChange)="onChange($event)" nome="genero"  interface="popover" placeholder="Selecionar" required>
+                <ion-select-option *ngFor="let item of generos" [value]="item.text">{{ item.text}}</ion-select-option>
             </ion-select>
         </ion-item>
             <ion-item>
