--- a/src/app/pages/entrar/entrar.page.html
+++ b/src/app/pages/entrar/entrar.page.html
@@ -37,8 +37,8 @@
                   <ion-item lines="none">
                     <ion-input placeholder="password"  type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
                   </ion-item>
-                  <ion-item lines="none" >
-                  <ion-label>Esqueceu a senha ?</ion-label>
+                  <ion-item class="form" lines="none" >
+                  <ion-label >Esqueceu a senha ?</ion-label>
                   </ion-item>
             </ion-item-group>
         </ion-list>
@@ -50,7 +50,7 @@
     </form>
 
     <div class="ion-padding-vertical-3x">
-        <ion-button (click)="showPageCadastrar()" color="dark" fill="outline" size="large">
+        <ion-button class="btnCriar" (click)="showPageCadastrar()" color="dark" fill="outline" size="large">
             Criar Perfil
         </ion-button>
     </div>
