--- a/src/app/pages/servicos/servicos.page.html
+++ b/src/app/pages/servicos/servicos.page.html
@@ -1,32 +1,31 @@
 <ion-header>
-    <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title slot="start">Serviços</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title slot="start">Serviços</ion-title>
+  </ion-toolbar>
 
-    <ion-toolbar>
-        <ion-tabs>
-            <ion-tab-bar slot="top">
-                <ion-tab-button tab="localizacao" (click)="showPageLocalizacao()">
-                    <ion-icon name="location-outline"></ion-icon>
-                    <ion-label>Localização</ion-label>
-                </ion-tab-button>
+  <ion-toolbar>
+    <ion-tabs>
+      <ion-tab-bar slot="top">
+        <ion-tab-button tab="localizacao">
+          <ion-icon name="location-outline"></ion-icon>
+          <ion-label>Localização</ion-label>
+        </ion-tab-button>
 
-                <ion-tab-button tab="categorias" (click)="showPageCategorias()">
-                    <ion-icon name="pencil-sharp"></ion-icon>
-                    <ion-label>Categorias</ion-label>
-                </ion-tab-button>
+        <ion-tab-button tab="categorias">
+          <ion-icon name="pencil-sharp"></ion-icon>
+          <ion-label>Categorias</ion-label>
+        </ion-tab-button>
 
-                <ion-tab-button tab="filtros" (click)="showPageFiltros()">
-                    <ion-icon name="filter-outline"></ion-icon>
-                    <ion-label>Filtros</ion-label>
-                </ion-tab-button>
-            </ion-tab-bar>
-        </ion-tabs>
-    </ion-toolbar>
-
+        <ion-tab-button tab="filtros">
+          <ion-icon name="filter-outline"></ion-icon>
+          <ion-label>Filtros</ion-label>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
